<resources>
    <string name="app_name">My Weather App</string>
    <string name="st_paul_mn">St. Paul, MN</string>
    <string name="temperature">%1$d°</string>
    <string name="feels_like">Feels Like %1$d°</string>
    <string name="low">Low %1$d°</string>
    <string name="high">High %1$d°</string>
    <string name="humidity">Humidity %1$d%%</string>
    <string name="pressure">Pressure %1$d hPa</string>
    <string name="forecast">Forecast</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="zip_code">ZIP Code</string>
    <string name="submit">SUBMIT</string>
    <string name="ok">OK</string>
    <string name="location">Use Location</string>
    <string name="enterZip">Enter a ZIP Code</string>
    <string name="location_permission_rationale">Location Message</string>
</resources>