<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/city_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/st_paul_mn"
        android:layout_marginTop="12dp"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="72sp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="48dp"
        android:textColor="@color/black"
        android:text="@string/temperature"
        app:layout_constraintTop_toBottomOf="@id/city_name"
        app:layout_constraintStart_toStartOf="parent"
        />

        <ImageView
            android:id="@+id/condition_icon"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:contentDescription="@null"
            android:scaleType="center"
            android:src="@drawable/sun"
            app:layout_constraintTop_toTopOf="@id/temperature"
            app:layout_constraintBottom_toBottomOf="@id/temperature"
            app:layout_constraintStart_toEndOf="@id/temperature"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/feels_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feels_like"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/temperature"
            app:layout_constraintStart_toStartOf="@id/temperature"
            app:layout_constraintEnd_toEndOf="@id/temperature"
            />

        <TextView
            android:id="@+id/low"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/low"
            android:layout_marginTop="24dp"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/temperature"
            app:layout_constraintTop_toBottomOf="@id/feels_like"
            />

        <TextView
            android:id="@+id/high"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/high"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/temperature"
            app:layout_constraintTop_toBottomOf="@id/low"
        />

    <TextView
        android:id="@+id/humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/temperature"
        app:layout_constraintTop_toBottomOf="@id/high"
        />

    <TextView
        android:id="@+id/pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressure"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/temperature"
        app:layout_constraintTop_toBottomOf="@id/humidity"
        />

</androidx.constraintlayout.widget.ConstraintLayout>